<resources>
    <string name="app_name">CIT</string>
    <string name="action_settings">Settings</string>

    <string name="scan_tip">将二维码/条码放入框内，即可自动扫描</string>
    <string name="btn_ok">确定</string>
    <string name="btn_back">返回</string>
    <string name="btn_next">下一步</string>
    <string name="btn_cancle">取消</string>
    <string name="scan_reault">扫描结果：</string>

    <string name="tv_user_name">用户信息</string>
    <string name="tv_car_out">出车</string>
    <string name="tv_car_in">回车</string>
    <string name="user_name">工号</string>
    <string name="user_pwd">密码</string>
    <string name="user_login">登录</string>
    <string name="tv_main_1">绑定押运车</string>
    <string name="tv_main_2">出入库物品清单</string>
    <string name="tv_main_3">业务操作</string>
    <string name="tv_main_4">领用物品登记</string>
    <string name="tv_main_5">特别支出</string>
    <string name="tv_main_6">接收物品</string>
    <string name="tv_main_7">调度消息</string>
    <string name="tv_main_8">更换包装</string>

    <string name="please_out">您还没有出车，无法执行此操作！</string>
    <string name="exit_again">再按一次退出程序</string>
    <string name="user_one">队长</string>
    <string name="user_other">队员</string>
    <string name="login_out">退出登录</string>
    <string name="state_login_out">已签出</string>
    <string name="state_login_in">已签到</string>
    <string name="state_user_in">未签到</string>
    <string name="btn_login_out">签出</string>
    <string name="btn_login_in">签入</string>
    <string name="btn_pro_captain">确认提升队长</string>
    <string name="user_info_name">姓名</string>
    <string name="user_info_job">工号</string>
    <string name="user_info_depment">岗位</string>
    <string name="down_load_tip_head">提示</string>
    <string name="usre_login_out">确定退出?</string>
    <string name="code_error">编码错误，请核对！</string>
    <string name="carme_error">后置摄像头不可用</string>
    <string name="user_error_job">工号不能为空！</string>
    <string name="user_not_in">队员未签入，不可签出！</string>
    <string name="user_in_success">队员签入成功！</string>
    <string name="user_out_success">队员签出成功！</string>
    <string name="user_in_ok">队员已经签入，请核对！</string>
    <string name="user_out_ok">队员已经签出，请核对！</string>

    <string name="unbind_truck_btn">解绑押运车</string>
    <string name="bind_truck">已绑定</string>
    <string name="bind_truck_success">车辆绑定成功！</string>
    <string name="unbind_truck_success">车辆解绑成功</string>
    <string name="bind_truck_error">车辆未绑定，不可进行解绑!</string>
    <string name="bind_ok">车辆已经绑定，请核对!</string>
    <string name="unbind_ok">车辆已经解绑，请核对!</string>
    <string name="unbind_truck">未绑定</string>
    <string name="unbind_truck_ok">已解绑</string>
    <string name="truck_kilometre">公里数</string>
    <string name="truck_barcode">车辆编码</string>
    <string name="text_save">保存</string>
    <string name="special_1">类别</string>
    <string name="special_2">时间</string>
    <string name="special_3">地址</string>
    <string name="special_4">费用金额</string>
    <string name="special_5">备注</string>
    <string name="please_check">请选择</string>
    <string name="not_empoty">不能为空！</string>
    <string name="toast_tip_message">消息提示</string>
    <string name="dialog_confirm">保存操作数据？</string>
    <string name="tv_item_main_1">网点名称：</string>
    <string name="tv_item_main_2">客户名称：</string>
    <string name="tv_item_main_3">任务类型：</string>
    <string name="tv_item_main_4">时间：</string>
    <string name="tv_task_type_5">派件</string>
    <string name="tv_task_type_6">收件</string>
    <string name="tv_task_type_7">送零</string>
    <string name="task_finish">已完成</string>
    <string name="task_unfinish">未完成</string>
    <string name="task_detail">任务详情</string>
    <string name="add_busin_down">下车操作</string>
    <string name="add_busin_operate">现场操作</string>
    <string name="add_busin_up">上车操作</string>
    <string name="toast_down_done">下车已完成，请完成所有操作!</string>
    <string name="get_off_car">确定下车？</string>
    <string name="get_up_car">确定上车？</string>
    <string name="not_up_car">确定无物品上车？</string>
    <string name="add_tv_total">统计信息</string>
    <string name="add_total_nuber">总物品数</string>
    <string name="add_ok_nuber">完成物品数</string>
    <string name="add_atm_againscan">重扫</string>
    <string name="add_outinstorage_title">出入库清单操作</string>
    <string name="add_outinstorage_out_tag">出库清单</string>
    <string name="add_outinstorage_in_tag">入库清单</string>
    <string name="delete_branch_down">删除误操作网点信息</string>

</resources>
