<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/generic_white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="49dip"
        android:background="@color/subject_text"
        android:paddingLeft="15dip"
        android:paddingRight="15dip">

        <TextView
            android:id="@+id/tv_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="3dip"
            android:text="@string/tv_user_name"
            android:textColor="@color/generic_white"
            android:textSize="@dimen/list_item" />

        <TextView
            android:id="@+id/tv_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="3dip"
            android:text="@string/tv_car_out"
            android:textColor="@color/generic_white"
            android:textSize="@dimen/list_item" />

    </RelativeLayout>


    <ListView
        android:id="@+id/list_main"
        android:dividerHeight="@dimen/dividerHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.xvli.cit.view.Fab
            android:id="@+id/fab"
            style="@style/Widget.MaterialSheetFab.Fab"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="15dip"
            android:layout_marginRight="15dp"/>

        <com.gordonwong.materialsheetfab.DimOverlayFrameLayout
            android:id="@+id/overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <io.codetail.widget.RevealLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end|bottom"
            android:paddingBottom="15dip"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/fab_sheet"
                style="@style/Widget.MaterialSheetFab.Sheet"
                android:layout_width="@dimen/fab_maring_layout"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/fab_item_selector"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/bt_add_1"
                        style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/tv_main_1" />

                    <TextView
                        android:id="@+id/bt_add_2"
                        style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/tv_main_2" />

                    <TextView
                        android:id="@+id/bt_add_3"
                        style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/tv_main_3" />

                    <TextView
                        android:id="@+id/bt_add_4"
                        style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/tv_main_4" />

                    <TextView
                        android:id="@+id/bt_add_5"
                        style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/tv_main_5" />

                    <TextView
                        android:id="@+id/bt_add_6"
                        style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/tv_main_6" />

                    <TextView
                        android:id="@+id/bt_add_7"
                        style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/tv_main_7" />

                    <TextView
                        android:id="@+id/bt_add_8"
                        style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/tv_main_8" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </io.codetail.widget.RevealLinearLayout>
    </RelativeLayout>

</RelativeLayout>

