<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gb_color"
    android:orientation="vertical">

    <include
        android:id="@+id/top"
        layout="@layout/comm_title_bar"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_down"
            style="@style/generic_button_buttom"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/big_btn_heignt"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_sure"
            android:text="@string/add_busin_down" />

        <Button
            android:id="@+id/btn_bins_oper"
            style="@style/generic_button_buttom"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/big_btn_heignt"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_sure"
            android:enabled="true"
            android:text="@string/add_busin_operate" />


        <Button
            android:id="@+id/btn_up"
            style="@style/generic_button_buttom"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/big_btn_heignt"
            android:layout_marginTop="20dip"
            android:layout_marginBottom="20dp"
            android:background="@drawable/login_sure"
            android:enabled="true"
            android:text="@string/add_busin_up" />
    </LinearLayout>
</RelativeLayout>
