<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dip"
    tools:context="com.xvli.cit.fragment.UserOneFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/list_item_heignt"
            android:background="@color/generic_white"
            android:paddingLeft="10dip"
            android:paddingRight="10dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/user_info_name"
                android:textColor="@color/black_color" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="@color/black_color" />
        </RelativeLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dividerHeight" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/list_item_heignt"
            android:background="@color/generic_white"
            android:paddingLeft="10dip"
            android:paddingRight="10dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/user_info_job"
                android:textColor="@color/black_color" />

            <TextView
                android:id="@+id/user_job"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="@color/black_color" />
        </RelativeLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dividerHeight" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/list_item_heignt"
            android:background="@color/generic_white"
            android:paddingLeft="10dip"
            android:paddingRight="10dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/user_info_depment"
                android:textColor="@color/black_color" />

            <TextView
                android:id="@+id/user_depment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="@color/black_color" />
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_pro_captain"
        android:layout_width="match_parent"
        android:layout_height="@dimen/big_btn_heignt"
        android:layout_above="@+id/btn_login_out"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bt_long_sure"
        android:text="@string/btn_pro_captain"
        android:textSize="@dimen/list_item" />

    <Button
        android:id="@+id/btn_login_out"
        android:layout_width="match_parent"
        android:layout_height="@dimen/big_btn_heignt"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dip"
        android:background="@drawable/bt_long_sure"
        android:text="@string/login_out"
        android:textSize="@dimen/list_item" />


</RelativeLayout>
