<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_choose_dialog"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_head"
        android:layout_width="250dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/sheet_spacing"
        android:layout_marginTop="@dimen/dialog_margin_top"
        android:gravity="center"
        android:text="@string/down_load_tip_head"
        android:textColor="@color/subject_text"
        android:textSize="@dimen/list_item" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_view_height"
        android:background="@color/line_color" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:background="@color/generic_white"
        android:minHeight="70dip"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/truck_kilometre"
            android:textColor="@color/black_color"
            android:textSize="@dimen/list_item" />

        <EditText
            android:id="@+id/edit_num"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:background="@null"
            android:focusable="true"
            android:gravity="center"
            android:singleLine="true"
            android:textColor="@color/black_color"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="@dimen/list_item" />

        <ImageView
            android:id="@+id/img_scan"
            android:layout_width="0dip"
            android:layout_height="@dimen/top3"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:visibility="gone"
            android:paddingRight="15dip"
            android:src="@mipmap/scan_icon" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_view_height"
        android:layout_marginTop="@dimen/sheet_spacing"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_but_ok"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/add_absrb_card"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:text="@string/btn_ok"
            android:textColor="@color/subject_text"
            android:textSize="@dimen/list_item" />

        <View
            android:id="@+id/view_line"
            android:layout_width="@dimen/dialog_view_height"
            android:layout_height="@dimen/add_absrb_card"
            android:background="@color/line_color" />

        <Button
            android:id="@+id/dialog_but_cancle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/add_absrb_card"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:text="@string/btn_cancle"
            android:textColor="@color/subject_text"
            android:textSize="@dimen/list_item" />
    </LinearLayout>

</LinearLayout>