<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/gb_color"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/ll_layout_title"
        android:layout_width="match_parent"
        android:layout_height="49dip"
        android:layout_centerHorizontal="true"
        android:background="@color/subject_text">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:paddingLeft="3dip"
            android:src="@mipmap/back"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@null"
            android:text="@string/btn_back"
            android:textAllCaps="false"
            android:textColor="@color/generic_white"
            android:textSize="@dimen/list_item" />

        <ImageView
            android:id="@+id/img_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:padding="15dip"
            android:src="@mipmap/add" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="180dip"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:textColor="@color/generic_white"
            android:textSize="@dimen/list_item" />
    </RelativeLayout>

    <ListView
        android:id="@+id/list_special"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_bind"
        android:layout_below="@+id/ll_layout_title"
        android:layout_marginBottom="15dip"
        android:layout_marginTop="15dip"
        android:dividerHeight="@dimen/dividerHeight" />

    <Button
        android:id="@+id/btn_bind"
        android:layout_width="match_parent"
        android:layout_height="@dimen/big_btn_heignt"
        android:layout_above="@+id/btn_unbind"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bt_long_sure"
        android:text="@string/tv_main_1"
        android:textSize="@dimen/list_item"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_unbind"
        android:layout_width="match_parent"
        android:layout_height="@dimen/big_btn_heignt"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dip"
        android:background="@drawable/bt_long_sure"
        android:text="@string/unbind_truck_btn"
        android:textSize="@dimen/list_item"
        android:visibility="gone" />
</RelativeLayout>

